[gd_scene load_steps=10 format=3 uid="uid://b05pv0f188bmq"]

[ext_resource type="Texture2D" uid="uid://cichaycknfklq" path="res://Assets/textures/bg.png" id="1_ub2mp"]
[ext_resource type="Script" path="res://Scripts/game.gd" id="1_y70ur"]
[ext_resource type="PackedScene" uid="uid://bamjag7h47p0n" path="res://Scenes/player.tscn" id="2_k0eex"]
[ext_resource type="PackedScene" uid="uid://1qopvy4o2k1g" path="res://Scenes/hud.tscn" id="2_xxd8s"]
[ext_resource type="PackedScene" uid="uid://1am082o4s1au" path="res://Scenes/enemy_spawner.tscn" id="3_swuv1"]
[ext_resource type="AudioStream" uid="uid://dnpae1yyhjsyq" path="res://Assets/audio/hit.wav" id="6_ehff0"]
[ext_resource type="AudioStream" uid="uid://btcq7o5cgecdv" path="res://Assets/audio/explode.wav" id="7_e8rqe"]

[sub_resource type="GDScript" id="GDScript_d5ksj"]
script/source = "extends Area2D


# Called when the node enters the scene tree for the first time.
func _ready():
	pass # Replace with function body.


# Called every frame. 'delta' is the elapsed time since the previous frame.
func _process(delta):
	pass
"

[sub_resource type="RectangleShape2D" id="RectangleShape2D_6wufj"]
size = Vector2(20, 888)

[node name="Game" type="Node2D"]
script = ExtResource("1_y70ur")

[node name="GameUI" type="CanvasLayer" parent="."]

[node name="HUD" parent="GameUI" instance=ExtResource("2_xxd8s")]

[node name="Audio" type="Node" parent="."]

[node name="EnemyHit" type="AudioStreamPlayer" parent="Audio"]
stream = ExtResource("6_ehff0")

[node name="PlayerHit" type="AudioStreamPlayer2D" parent="Audio"]
stream = ExtResource("7_e8rqe")

[node name="Background" type="TextureRect" parent="."]
offset_right = 3238.0
offset_bottom = 1928.0
texture = ExtResource("1_ub2mp")
stretch_mode = 1

[node name="Player" parent="." instance=ExtResource("2_k0eex")]
position = Vector2(115, 276)

[node name="EnemySpawner" parent="." instance=ExtResource("3_swuv1")]

[node name="Deathzone" type="Area2D" parent="."]
collision_layer = 9
collision_mask = 4
script = SubResource("GDScript_d5ksj")

[node name="CollisionShape2D" type="CollisionShape2D" parent="Deathzone"]
position = Vector2(-145, 436)
shape = SubResource("RectangleShape2D_6wufj")

[connection signal="took_damage" from="Player" to="." method="_on_player_took_damage"]
[connection signal="enemy_spawned" from="EnemySpawner" to="." method="_on_enemy_spawner_enemy_spawned"]
[connection signal="path_enemy_spawned" from="EnemySpawner" to="." method="_on_enemy_spawner_path_enemy_spawned"]
[connection signal="area_entered" from="Deathzone" to="." method="_on_deathzone_area_entered"]
